--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "dependencies/libcommon"]
-	path = dependencies/libcommon
-	url = git@gitlab.nateo-healthcare.com:zenpreg/libcommon.git
+    path = dependencies/libcommon
+    url = git@gitlab.nateo-healthcare.com:zenpreg/libcommon.git
+    branch = .
