fix target to be a static lib
Signed-off-by: cne <c.neyton@nateo-healthcare.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,18 +10,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # Allow static library to be included in another lib (used for python wrapping)
 SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-add_library(hdcp INTERFACE)
+add_library(hdcp STATIC)
 
 add_subdirectory(src)
 add_subdirectory(dependencies)
 
 target_include_directories(hdcp
-    INTERFACE
+    PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
-    ${CMAKE_CURRENT_SOURCE_DIR}/src
     )
 
-target_link_libraries(hdcp INTERFACE common)
+target_link_libraries(hdcp PUBLIC common usb-1.0)
 
 target_compile_options(hdcp INTERFACE -Werror -Wall -Wextra)
 
