[APPLI] add application
Signed-off-by: cne <c.neyton@nateo-healthcare.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,5 @@ target_sources(hdcp
     #${CMAKE_CURRENT_SOURCE_DIR}/usb_async.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/request.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/packet.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/application.cpp
     )
