--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 target_sources(hdcp
     PRIVATE
-    #${CMAKE_CURRENT_SOURCE_DIR}/usb_async.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/usb_async.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/request.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/packet.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/application.cpp
