[APPLICATION] add master/slave application
Signed-off-by: cne <c.neyton@nateo-healthcare.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,6 @@ target_sources(hdcp
     ${CMAKE_CURRENT_SOURCE_DIR}/tcp_async.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/request.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/packet.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/application.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/application_slave.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/slave.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/master.cpp
     )
