--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,11 +3,12 @@ set(files
     packet_test.cpp
     application_test.cpp
     transport_tcp_test.cpp
+    tcp_client_test.cpp
     )
 
 foreach(file ${files})
     get_filename_component(target_name ${file} NAME_WE)
     add_executable(${target_name} ${file})
     target_link_libraries(${target_name} hdcp)
-    target_compile_options(${target_name} PUBLIC -Wall -Wextra -g -fno-inline)
+    target_compile_options(${target_name} PUBLIC -Wall -Wextra -g)
 endforeach()
