[TCP_CLIENT] fix short read
Signed-off-by: cne <c.neyton@nateo-healthcare.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,5 +10,5 @@ foreach(file ${files})
     get_filename_component(target_name ${file} NAME_WE)
     add_executable(${target_name} ${file})
     target_link_libraries(${target_name} hdcp)
-    target_compile_options(${target_name} PUBLIC -Wall -Wextra -g)
+    target_compile_options(${target_name} PUBLIC -Wall -Wextra)
 endforeach()
