[USB_ASYNC] add & fix logs
Signed-off-by: cne <c.neyton@nateo-healthcare.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,7 @@ set(files
     tcp_client_test.cpp
     master_tcp_test.cpp
     slave_tcp_test.cpp
+    master_usb_test.cpp
     )
 
 foreach(file ${files})
