update gitmodules with relative path
Signed-off-by: cne <c.neyton@nateo-healthcare.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "dependencies/libcommon"]
     path = dependencies/libcommon
-    url = git@gitlab.nateo-healthcare.com:zenpreg/libcommon.git
+    url = ../libcommon.git
     branch = .
