refactoring of error management using error_code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ target_sources(hdcp PRIVATE
     src/packet.cpp
     src/slave.cpp
     src/master.cpp
+    src/error_code.cpp
     )
 target_include_directories(hdcp PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
